[package]
name = "advent-2023"
version = "0.1.0"
authors = ["Sol Toder <ajaxgb@gmail.com>"]
edition = "2021"

[[bin]]
name = "day01"
path = "src/day01/main.rs"
[[bin]]
name = "day02"
path = "src/day02/main.rs"
[[bin]]
name = "day03"
path = "src/day03/main.rs"
[[bin]]
name = "day04"
path = "src/day04/main.rs"

[dependencies]
regex = "1.10"
thiserror = "1.0.50"
